--- a/pom.xml
+++ b/pom.xml
@@ -13,74 +13,58 @@
             <artifactId>karate-core</artifactId>
             <version>1.0.1</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.intuit.karate/karate-apache -->
-        <dependency>
-            <groupId>com.intuit.karate</groupId>
-            <artifactId>karate-apache</artifactId>
-            <version>0.9.6</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.intuit.karate/karate-junit4 -->
-        <dependency>
-            <groupId>com.intuit.karate</groupId>
-            <artifactId>karate-junit4</artifactId>
-            <version>1.2.0</version>
-            <scope>test</scope>
-        </dependency>
+
         <dependency>
             <groupId>com.intuit.karate</groupId>
             <artifactId>karate-junit5</artifactId>
-            <version>1.2.0</version>
+            <version>1.0.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>net.masterthought</groupId>
             <artifactId>cucumber-reporting</artifactId>
-            <version>5.7.4</version>
+            <version>5.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
-<plugins>
-    <plugin>
-    <groupId>net.masterthought</groupId>
-    <artifactId>maven-cucumber-reporting</artifactId>
-    <version>5.7.4</version>
-    <executions>
-        <execution>
-            <id>generate-cucumber-reports</id>
-            <phase>test</phase>
-            <goals>
-                <goal>generate</goal>
-            </goals>
-            <configuration>
-                <jsonFiles>
-                    <param>**/*.json</param>
-                </jsonFiles>
-                <outputDirectory>${project.build.directory}/cucumber-reports</outputDirectory>
-                <inputDirectory>${project.build.directory}/cucumber</inputDirectory>
-                <checkBuildResult>false</checkBuildResult>
-            </configuration>
-        </execution>
-    </executions>
-</plugin></plugins>
-            <!--  KarateTestResources  -->
-            <testResources>
-                <testResource>
-                    <directory>src/test/java</directory>
-                    <excludes>
-                        <exclude>**/*.java</exclude>
-                    </excludes>
-                </testResource>
-            </testResources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+            </plugin>
 
-
+        </plugins>
+        <!--  KarateTestResources  -->
+        <testResources>
+            <testResource>
+                <directory>src/test/java</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </testResource>
+        </testResources>
     </build>
-
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <junit.version>[4.12]</junit.version>
     </properties>
 
 </project>
